Исправление метода получения сабтаска Исправление List на LinkedList в истории